[gd_scene load_steps=2 format=3 uid="uid://cmhtw2syxfidx"]

[ext_resource type="Script" uid="uid://djigta1lihr0r" path="res://escenas/ui/menu_pausa.gd" id="1_pn3c4"]

[node name="MenuPausa" type="CanvasLayer"]
script = ExtResource("1_pn3c4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1150.0
offset_bottom = 654.0
color = Color(0, 0, 0, 0.5882353)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1150.0
offset_bottom = 654.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Continuar" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Continuar
"

[node name="IrAMenu" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="SalirDelJuego" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Salir"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/IrAMenu" to="." method="_on_ir_a_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SalirDelJuego" to="." method="_on_salir_del_juego_pressed"]
